# rust_rp2040

./: Cargo.toml
.cargo/: config.toml
src/: error.rs  main.rs
